hphp/test/zend/good/ext-iconv/iconv003.php
<?php
for ($i = 0; $i < 3; ++$i) { 
	if (@iconv('blah', 'blah', 'blah') != '') {
		die("failed\n");
	}
}
echo "success\n";
?>